# gst-cuda-dmabuf

./: .gitignore  Dockerfile.deb  LICENSE  Makefile  README.md  gst-cuda-dmabuf.spec  meson.build  nvidia.supp
.github/workflows/: apt-repo.yml  ci.yml  compatibility.yml  copr.yml  release.yml
debian/: changelog  control  copyright  rules
scripts/: bump-version.sh
src/: buffer_transform.c  buffer_transform.h  caps_transform.c  caps_transform.h  cuda_egl_interop.c  cuda_egl_interop.h  cuda_nv12_to_bgrx.cu  cuda_nv12_to_bgrx.h  drm_format_utils.c  drm_format_utils.h  external_fd_pool.c  external_fd_pool.h  fix_glibc_cuda.h  gbm_dmabuf_pool.c  gbm_dmabuf_pool.h  gstcudadmabufupload.c  gstcudadmabufupload.h  meson.build  plugin.c  pooled_buffers.c  pooled_buffers.h
src/cuda_compat/crt/: math_functions.h
tests/: meson.build  test_video_meta.c
